#46 fix line distance and z-index

--- a/src/assets/stylesheets/components/link-where-child.scss
+++ b/src/assets/stylesheets/components/link-where-child.scss
@@ -6,6 +6,7 @@
         position: absolute;
         background-color: themes.$custom-red;
         display: block;
+        z-index: -1;
     }
     .horizontal{
         z-index: 1; // span or should be overlayd over .lower-vertical
